--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ header p{
 
 /*----------------------------------FOOTER-------------------------*/
 
-.attribution { font-size: 8px; text-align: left; }
+.attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 
 /*----------------------------------(600PX)-------------------------*/
